# lib-phynfra

./: .editorconfig  .flake8  .pre-commit-config.yaml  .yamllint  Dockerfile  license.txt  pyproject.toml  readme.md
.dakt/docker/: build.sh  entrypoint.sh  spark.Dockerfile
.github/workflows/: github_ci_build_python_package_commit.yml  github_ci_build_python_package_dev_commit.yml
phynfra/: __main__.py  logger.py  tester.py
phynfra/apache/: spark.py
phynfra/atomic/: calendar.py  http.py  json.py
phynfra/aws/: async_utils.py  s3.py  secret.py  secretsmanager.py  storage.py
phynfra/commons/: api.py  utils.py
phynfra/microsoft/: powerbi.py
phynfra/orchestrator/: tasks.py
phynfra/spark/: loaders.py  spark.py
scripts/: build.sh  docker-run-spark.sh  download-jar.sh  example.sh
