# PHYNFRA - Python Houer Infrastructure
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "phynfra"
authors = [
	{name = "Jaime Daniel Corrêa Mendes", email = "jaimedaniel@houer.com.br"}
]
description = "Phynfra - Python Houer Infraestructure"
readme = {file = "readme.md", content-type =  "text/markdown"}
requires-python = ">=3.9"
license = {file = "license.txt"}
version = "0.0.1"

[project.scripts]
phynfra = "phynfra.__main__:main"

[tool.poetry]
name = "phynfra"
version = "0.0.1"
description = "Phynfra - Python Houer Infraestructure"
authors = ["Jaime Daniel Corrêa Mendes <jaimedaniel@houer.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "*"
deltalake = "*"
delta-spark = "*"
openpyxl = "*"
pandas = "*"
python-dotenv = "*"
pyspark = "*"
requests = "*"
pytz = "*"

[tool.poetry.dev-dependencies]
poetry = "*"

# python -m phynfra --command run --configuration /Volumes/Data/Houer/my-phynfra/.env --module phynfra.aws.s3.read
# python -m phynfra --command run --configuration /Volumes/Data/Houer/my-phynfra/.env --module phynfra.apache.spark.roda
